--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx tsc && node meme_scrapper.js",
-    "main": "npx tsc && node main.js"
+    "main": "npx tsc && node bin/main.js"
   },
   "repository": {
     "type": "git",
