--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cheerio": "^0.22.31",
     "@types/readline-sync": "^1.4.4",
     "cheerio": "^1.0.0-rc.12",
+    "prettier": "^2.7.1",
     "process": "^0.11.10",
     "readline-sync": "^1.4.10",
     "typescript": "^4.9.3"
